--- a/index.html
+++ b/index.html
@@ -15,50 +15,46 @@
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 
-<title>Уральская вагоноремонтная компания</title>
+	<title>Уральская вагоноремонтная компания</title>
 </head>
 
 <body>
 
 	<!-- Навбар -->
-		<nav class="navbar navbar-expand-sm navbar-light">
-			<a class="navbar-brand" href="#">
-				<img src="img/main/logo.png" height="35" alt="uvk">
-			</a>
-			<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
-				data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
-				aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="collapsibleNavId">
-				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-					<li class="nav-item text-uppercase">
-						<a class="nav-link" href="pages/about.html">О компании</a>
-					</li>
-					<li class="nav-item text-uppercase">
-						<a class="nav-link" href="#">Услуги</a>
-					</li>
-					<li class="nav-item text-uppercase">
-						<a class="nav-link" href="pages/contacts.html">Контакты</a>
-					</li>
-				</ul>
-				<span class="phone-number">+7 (3519) 24-86-24</span>
-			</div>
-		</nav>
-		<div class="name">
-			<img src="img/main/main.jpg"
-  srcset="
+	<nav class="navbar navbar-expand-sm navbar-light">
+		<a class="navbar-brand" href="#">
+			<img src="img/main/logo.png" height="35" alt="uvk">
+		</a>
+		<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
+			aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="collapsibleNavId">
+			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+				<li class="nav-item text-uppercase">
+					<a class="nav-link" href="pages/about.html">О компании</a>
+				</li>
+				<li class="nav-item text-uppercase">
+					<a class="nav-link" href="#">Услуги</a>
+				</li>
+				<li class="nav-item text-uppercase">
+					<a class="nav-link" href="pages/contacts.html">Контакты</a>
+				</li>
+			</ul>
+			<span class="phone-number">+7 (3519) 24-86-24</span>
+		</div>
+	</nav>
+		<img src="img/main/main.jpg" srcset="
     img/main/main-mobile.jpg 320w,
     img/main/main-wide-mobile.jpg 480w,
     img/main/main-tablet.jpg 768w,
     img/main/main-desktop.jpg 1024w,
-    img/main/main-hires.jpg 1280w"
-  sizes="
+    img/main/main-hires.jpg 1280w,
+    img/main/main-notebook.jpg 1366w,
+    img/main/main-hd+.jpg 1617w" sizes="
     (max-width: 20em) 30vw,
     (max-width: 30em) 60vw,
-    (max-width: 40em) 90vw"
-  alt="УВК">
-		</div>
+    (max-width: 40em) 90vw" alt="УВК">
 
 	<!-- Услуги -->
 	<div id="accordion">
@@ -92,7 +88,8 @@
 							</div>
 						</div>
 						<div class="col-12 col-sm-6 col-md-12  col-lg-12 col-xl-6">
-							<div class="services"><img src="img/main/repair-vagon.jpg" alt="serv-img" class="rounded"></div>
+							<div class="services"><img src="img/main/repair-vagon.jpg" alt="serv-img" class="rounded">
+							</div>
 						</div>
 					</div>
 					<h5>Мы ремонтируем:</h5>
@@ -161,7 +158,8 @@
 							</div>
 						</div>
 						<div class="col-12 col-sm-6 col-md-12 col-lg-6 col-xl-6">
-							<div class="services"><img src="img/main/repair-pair.jpg" alt="serv-img" class="rounded"></div>
+							<div class="services"><img src="img/main/repair-pair.jpg" alt="serv-img" class="rounded">
+							</div>
 						</div>
 					</div>
 				</div>
@@ -221,7 +219,7 @@
 		</div>
 	</div>
 
-		<!-- Партнеры слайдер
+	<!-- Партнеры слайдер
 	<div id="carouselId" class="carousel slide" data-ride="carousel">
 		<h4>Наши партнеры:</h4>
 		<div class="carousel-inner" role="listbox">
@@ -254,103 +252,103 @@
 		</div>
 	</div> 
 -->
-		<!-- Партнеры v.2 -->
-		<div class="block-partners">
-			<h4>Наши партнеры:</h4>
-			<div class="row">
-				<div class="d-flex justify-content-center col-sm-6 col-6 col-md-6 col-xl-3 partners">
-					<a href="http://garantrs.com" rel="noopener noreferrer" target="_blank" class="grs"><img
-							src="img/partners/grs.png" alt="partners"></a>
-				</div>
-				<div class="d-flex justify-content-center col-sm-6 col-6 col-md-6 col-xl-3 partners">
-					<a href="http://mmk.ru" rel="noopener noreferrer" target="_blank" class="mmk"><img
-							src="img/partners/mmk.png" alt="partners"></a>
-				</div>
-				<div class="d-flex justify-content-center col-sm-6 col-6 col-md-6 col-xl-3 partners">
-					<a href="https://npktrans.ru" rel="noopener noreferrer" target="_blank" class="np"><img
-							src="img/partners/np.png" alt="partners"></a>
-				</div>
-				<div class="d-flex justify-content-center col-sm-6 col-6 col-md-6 col-xl-3 partners">
-					<a href="http://zaotgk.ru" rel="noopener noreferrer" target="_blank" class="tgk"><img
-							src="img/partners/tgk.png" alt="partners"></a>
-				</div>
+	<!-- Партнеры v.2 -->
+	<div class="block-partners">
+		<h4>Наши партнеры:</h4>
+		<div class="row">
+			<div class="d-flex justify-content-center col-sm-6 col-6 col-md-6 col-xl-3 partners">
+				<a href="http://garantrs.com" rel="noopener noreferrer" target="_blank" class="grs"><img
+						src="img/partners/grs.png" alt="partners"></a>
+			</div>
+			<div class="d-flex justify-content-center col-sm-6 col-6 col-md-6 col-xl-3 partners">
+				<a href="http://mmk.ru" rel="noopener noreferrer" target="_blank" class="mmk"><img
+						src="img/partners/mmk.png" alt="partners"></a>
+			</div>
+			<div class="d-flex justify-content-center col-sm-6 col-6 col-md-6 col-xl-3 partners">
+				<a href="https://npktrans.ru" rel="noopener noreferrer" target="_blank" class="np"><img
+						src="img/partners/np.png" alt="partners"></a>
+			</div>
+			<div class="d-flex justify-content-center col-sm-6 col-6 col-md-6 col-xl-3 partners">
+				<a href="http://zaotgk.ru" rel="noopener noreferrer" target="_blank" class="tgk"><img
+						src="img/partners/tgk.png" alt="partners"></a>
 			</div>
 		</div>
+	</div>
 
-		<!-- Футер -->
-		<footer>
-			<div class="row">
-				<div class="footer col-12 col-md-6 col-xl-6 col-sm-12">
-					<p>АО «Уральская вагоноремонтная компания»<br>
-						455005 Челябинская область г. Магнитогорск ул. Моховая д. 16<br>
-						Телефон +7 (3519) 24-86-24<br>
-						Факс +7 (3519) 24-86-22<br>
-						Е-mail info@uvrk.ru</p>
-				</div>
-				<div class="footer col-12 col-md-6 col-xl-6 col-sm-12">
-					<p>Уральская вагоноремонтная компания состоит в составе объединения производителей железнодорожной
-						техники и в составе Globaltrans.</p>
-					<div class="row">
-						<div class="img d-flex justify-content-center col-sm-12 col-12 col-xl-6">
-							<a href="http://www.globaltrans.com" rel="noopener noreferrer" target="_blank"><img
-									src="img/partners/globaltrans.png" height="40" alt="globaltrans"></a>
-						</div>
-						<div class="img d-flex justify-content-center col-sm-12 col-12 col-xl-6">
-							<a href="http://www.opzt.ru" rel="noopener noreferrer" target="_blank"><img
-									src="img/partners/opzt.png" height="70" alt="opzt"></a>
-						</div>
+	<!-- Футер -->
+	<footer>
+		<div class="row">
+			<div class="footer col-12 col-md-6 col-xl-6 col-sm-12">
+				<p>АО «Уральская вагоноремонтная компания»<br>
+					455005 Челябинская область г. Магнитогорск ул. Моховая д. 16<br>
+					Телефон +7 (3519) 24-86-24<br>
+					Факс +7 (3519) 24-86-22<br>
+					Е-mail info@uvrk.ru</p>
+			</div>
+			<div class="footer col-12 col-md-6 col-xl-6 col-sm-12">
+				<p>Уральская вагоноремонтная компания состоит в составе объединения производителей железнодорожной
+					техники и в составе Globaltrans.</p>
+				<div class="row">
+					<div class="img d-flex justify-content-center col-sm-12 col-12 col-xl-6">
+						<a href="http://www.globaltrans.com" rel="noopener noreferrer" target="_blank"><img
+								src="img/partners/globaltrans.png" height="40" alt="globaltrans"></a>
+					</div>
+					<div class="img d-flex justify-content-center col-sm-12 col-12 col-xl-6">
+						<a href="http://www.opzt.ru" rel="noopener noreferrer" target="_blank"><img
+								src="img/partners/opzt.png" height="70" alt="opzt"></a>
 					</div>
 				</div>
 			</div>
-		</footer>
-		<script src="js/jquery-3.4.1.min.js"></script>
-		<script src="js/popper.min.js"></script>
-		<script src="js/SmoothScroll.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script>
-			$(document).ready(function () {
-				$('.grs').tooltip({
-					title: "Гарант рейл сервис",
-					html: true,
-					placement: "top"
-				});
-				$('.mmk').tooltip({
-					title: "Магнитогорский металлургический комбинат",
-					html: true,
-					placement: "top"
-				});
-				$('.np').tooltip({
-					title: "Новая перевозочная компания",
-					html: true,
-					placement: "top"
-				});
-				$('.tgk').tooltip({
-					title: "Трубная грузовая компания",
-					html: true,
-					placement: "top"
-				});
-				$('.cov').tooltip({
-					title: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ratione!",
-					html: true,
-					placement: "top"
-				});
-				$('.half-cov').tooltip({
-					title: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ratione!",
-					html: true,
-					placement: "top"
-				});
-				$('.platform').tooltip({
-					title: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ratione!",
-					html: true,
-					placement: "top"
-				});
-				$('.hopper').tooltip({
-					title: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ratione!",
-					html: true,
-					placement: "top"
-				});
+		</div>
+	</footer>
+	<script src="js/jquery-3.4.1.min.js"></script>
+	<script src="js/popper.min.js"></script>
+	<script src="js/SmoothScroll.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script>
+		$(document).ready(function () {
+			$('.grs').tooltip({
+				title: "Гарант рейл сервис",
+				html: true,
+				placement: "top"
 			});
-		</script>
+			$('.mmk').tooltip({
+				title: "Магнитогорский металлургический комбинат",
+				html: true,
+				placement: "top"
+			});
+			$('.np').tooltip({
+				title: "Новая перевозочная компания",
+				html: true,
+				placement: "top"
+			});
+			$('.tgk').tooltip({
+				title: "Трубная грузовая компания",
+				html: true,
+				placement: "top"
+			});
+			$('.cov').tooltip({
+				title: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ratione!",
+				html: true,
+				placement: "top"
+			});
+			$('.half-cov').tooltip({
+				title: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ratione!",
+				html: true,
+				placement: "top"
+			});
+			$('.platform').tooltip({
+				title: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ratione!",
+				html: true,
+				placement: "top"
+			});
+			$('.hopper').tooltip({
+				title: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ratione!",
+				html: true,
+				placement: "top"
+			});
+		});
+	</script>
 
 </body>
 
