--- a/pages/about.html
+++ b/pages/about.html
@@ -22,7 +22,6 @@
 <body>
 
     <!-- Навбар -->
-    <div class="container-fluid">
         <nav class="navbar navbar-expand-sm navbar-light">
             <a class="navbar-brand" href="../index.html">
                 <img src="../img/main/logo.png" height="35" alt="uvk">
@@ -47,10 +46,15 @@
                 <span class="phone-number">+7 (3519) 24-86-24</span>
             </div>
         </nav>
-        <div class="name">
-            <p>Уральская<br>Вагоноремонтная<br>Компания</p>
-        </div>
-    </div>
+		<img src="../img/main/main.jpg" srcset="
+    ../img/main/main-mobile.jpg 320w,
+    ../img/main/main-wide-mobile.jpg 480w,
+    ../img/main/main-tablet.jpg 768w,
+    ../img/main/main-desktop.jpg 1024w,
+    ../img/main/main-hires.jpg 1280w" sizes="
+    (max-width: 20em) 30vw,
+    (max-width: 30em) 60vw,
+    (max-width: 40em) 90vw" alt="УВК">
 
     <!-- О компании -->
 <div class="info">
