--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -14,41 +14,46 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <title>Контакты</title>
 </head>
 
 <body>
     <!-- Навбар -->
-    <div class="container-fluid">
-        <nav class="navbar navbar-expand-sm navbar-light">
-            <a class="navbar-brand" href="../index.html">
-                <img src="../img/main/logo.png" height="35" alt="uvk">
-            </a>
-            <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
-                data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="collapsibleNavId">
-                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item text-uppercase">
-                        <a class="nav-link" href="about.html">О компании</a>
-                    </li>
-                    <li class="nav-item text-uppercase">
-                        <a class="nav-link" href="#">Услуги</a>
-                    </li>
-                    <li class="nav-item text-uppercase">
-                        <a class="nav-link" href="#">Контакты</a>
-                    </li>
-                </ul>
-                <span class="phone-number">+7 (3519) 24-86-24</span>
-            </div>
-        </nav>
-        <div class="name">
-            <p>Уральская<br>Вагоноремонтная<br>Компания</p>
+    <nav class="navbar navbar-expand-sm navbar-light">
+        <a class="navbar-brand" href="../index.html">
+            <img src="../img/main/logo.png" height="35" alt="uvk">
+        </a>
+        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
+            aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavId">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item text-uppercase">
+                    <a class="nav-link" href="about.html">О компании</a>
+                </li>
+                <li class="nav-item text-uppercase">
+                    <a class="nav-link" href="#">Услуги</a>
+                </li>
+                <li class="nav-item text-uppercase">
+                    <a class="nav-link" href="#">Контакты</a>
+                </li>
+            </ul>
+            <span class="phone-number">+7 (3519) 24-86-24</span>
         </div>
-    </div>
+    </nav>
+    <img src="../img/main/main.jpg" srcset="
+    ../img/main/main-mobile.jpg 320w,
+    ../img/main/main-wide-mobile.jpg 480w,
+    ../img/main/main-tablet.jpg 768w,
+    ../img/main/main-desktop.jpg 1024w,
+    ../img/main/main-hires.jpg 1280w" sizes="
+    (max-width: 20em) 30vw,
+    (max-width: 30em) 60vw,
+    (max-width: 40em) 90vw" alt="УВК">
+    
     <div class="map">
         <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
@@ -71,7 +76,8 @@
                             <td>Тел: 24-86-20<br> test@uvrk.ru</td>
                         </tr>
                         <tr>
-                            <td scope="row"><span>Заместитель генерального директора по качеству и технологии</span></td>
+                            <td scope="row"><span>Заместитель генерального директора по качеству и технологии</span>
+                            </td>
                             <td>Юхименко Елена Геннадьевна</td>
                             <td>Тел: 24-86-20<br> test@uvrk.ru</td>
                         </tr>
