--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -44,12 +44,14 @@
             <span class="phone-number">+7 (3519) 24-86-24</span>
         </div>
     </nav>
-    <img src="../img/main/main.jpg" srcset="
+<img src="../img/main/main.jpg" srcset="
     ../img/main/main-mobile.jpg 320w,
     ../img/main/main-wide-mobile.jpg 480w,
     ../img/main/main-tablet.jpg 768w,
     ../img/main/main-desktop.jpg 1024w,
-    ../img/main/main-hires.jpg 1280w" sizes="
+    ../img/main/main-hires.jpg 1299w,
+    ../img/main/main-notebook.jpg 1400w,
+    ../img/main/main-hd+.jpg 1617w" sizes="
     (max-width: 20em) 30vw,
     (max-width: 30em) 60vw,
     (max-width: 40em) 90vw" alt="УВК">
