--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     img/main/main-desktop.jpg 1024w,
     img/main/main-hires.jpg 1299w,
     img/main/main-notebook.jpg 1400w,
-    img/main/main-hd+.jpg 1617w" sizes="
+    img/main/main-hd+.jpg 1617w,
+    img/main/main-fhd.jpg 1921w" sizes="
     (max-width: 20em) 30vw,
     (max-width: 30em) 60vw,
     (max-width: 40em) 90vw" alt="УВК">
