--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="ru">
 
 <head>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135464000-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+		gtag('config', 'UA-135464000-1');
+	</script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -14,12 +24,12 @@
 	<meta name="theme-color" content="#ffffff">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-
 	<title>Уральская вагоноремонтная компания</title>
+	<meta name="description" content="Ремонт грузовых вагонов и колесных пар">
+	<meta name="robots" content="index,follow">
 </head>
 
 <body>
-
 	<!-- Навбар -->
 	<nav class="navbar navbar-expand-sm navbar-light">
 		<a class="navbar-brand" href="#">
@@ -44,20 +54,18 @@
 			<span class="phone-number">+7 (3519) 24-86-24</span>
 		</div>
 	</nav>
-	
 	<img src="img/main/main.jpg" srcset="
     img/main/main-mobile.jpg 320w,
-    img/main/main-wide-mobile.jpg 480w,
+    img/main/main-wide-mobile.jpg 450w,
     img/main/main-tablet.jpg 768w,
     img/main/main-desktop.jpg 1024w,
     img/main/main-hires.jpg 1299w,
-    img/main/main-notebook.jpg 1400w,
+    img/main/main-notebook.jpg 1383w,
     img/main/main-hd+.jpg 1617w,
     img/main/main-fhd.jpg 1921w" sizes="
     (max-width: 20em) 30vw,
     (max-width: 30em) 60vw,
     (max-width: 40em) 90vw" alt="УВК">
-
 	<!-- Услуги -->
 	<div id="accordion">
 		<div class="card">
@@ -69,7 +77,7 @@
 			<div id="collapseOne" class="collapse show" data-parent="#accordion">
 				<div class="card-body">
 					<div class="row">
-						<div class="col-12 col-sm-12 col-md-12  col-lg-12 col-xl-6">
+						<div class="col-12 col-sm-12 col-md-12  col-lg-12 col-xl-7">
 							<div class="services">
 								<p>АО «УВК» производит капитальный, деповской ремонт полувагонов, а так
 									же текущий ремонт в объеме ТР-1 и ТР-2.</p>
@@ -78,52 +86,52 @@
 									вагонов на тележках Барбер производства Тихвинского вагоностроительного завода.</p>
 								<p>Благодаря современному оборудованию и высококвалифицированным специалистам ремонт
 									производится с гарантией качества, обеспечивающей эксплуатацию подвижного состава на
-									весь период до следующего планового ремонта</p>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi laudantium, asperiores
-									ex culpa similique temporibus aspernatur iusto quidem odio! Sunt eos vero ex
-									quibusdam expedita nostrum id quo quod commodi rem perspiciatis, dolor in libero
-									eligendi veniam veritatis necessitatibus sed, voluptas adipisci fugiat minus? Quis
-									dolore ex minima, natus molestiae dicta, temporibus aspernatur voluptate dolorum cum
-									fugiat, commodi itaque! Inventore excepturi, aperiam voluptatum maxime, expedita
-									officiis iure laboriosam quos placeat ea commodi nam ab. Voluptatem veritatis rem
-									ducimus accusantium voluptatibus?</p>
+									весь период до следующего планового ремонта.</p>
+							</div>
+							<h5>Мы ремонтируем:</h5>
+							<div class="row">
+								<div class="col-12 col-sm-12 col-md-6  col-lg-3 col-xl-3 d-flex flex-wrap align-content-end">
+									<div class="rc">
+										<img src="img/cov/cov.png" alt="vagon" class="cov">
+										<p>Крытые вагоны</p>
+									</div>
+								</div>
+								<div class="col-12 col-sm-12 col-md-6  col-lg-3 col-xl-3 d-flex flex-wrap align-content-end">
+									<div class="rc">
+										<img src="img/cov/poluvagon.png" alt="vagon" class="half-cov">
+										<p>Полувагоны</p>
+									</div>
+								</div>
+								<div class="col-12 col-sm-12 col-md-6  col-lg-3 col-xl-3 d-flex flex-wrap align-content-end">
+									<div class="rc">
+										<img src="img/cov/platform.png" alt="vagon" class="platform">
+										<p>Платформы</p>
+									</div>
+								</div>
+								<div class="col-12 col-sm-12 col-md-6  col-lg-3 col-xl-3 d-flex flex-wrap align-content-end">
+									<div class="rc">
+										<img src="img/cov/hopper.png" alt="vagon" class="hopper">
+										<p>Хопперы</p>
+									</div>
+								</div>
 							</div>
 						</div>
-						<div class="col-12 col-sm-6 col-md-12  col-lg-12 col-xl-6">
-							<div class="services"><img src="img/main/repair-vagon.jpg" alt="serv-img" class="rounded">
+						<div class="col-12 col-sm-12 col-md-12  col-lg-12 col-xl-5">
+							<div class="services">
+								<img src="img/main/rv.jpg" class="rounded" srcset="
+								img/main/rv.jpg 320w,
+								img/main/rv.jpg 450w,
+								img/main/rv.jpg 768w,
+								img/main/rv.jpg 1024w,
+								img/main/rv.jpg 1299w,
+								img/main/rv.jpg 1400w,
+								img/main/rv-hd+.jpg 1617w,
+								img/main/rv.jpg 1921w" sizes="
+								(max-width: 20em) 30vw,
+								(max-width: 30em) 60vw,
+								(max-width: 40em) 90vw" alt="УВК">
 							</div>
 						</div>
-					</div>
-					<h5>Мы ремонтируем:</h5>
-					<div class="row">
-
-						<div class="col-12 col-sm-12 col-md-6  col-lg-3 col-xl-3 d-flex flex-wrap align-content-end">
-							<div class="rc">
-								<img src="img/cov/cov.png" alt="vagon" class="cov">
-								<p>Крытые вагоны</p>
-							</div>
-						</div>
-						<div class="col-12 col-sm-12 col-md-6  col-lg-3 col-xl-3 d-flex flex-wrap align-content-end">
-							<div class="rc">
-								<img src="img/cov/poluvagon.png" alt="vagon" class="half-cov">
-								<p>Полувагоны</p>
-							</div>
-						</div>
-						<div class="col-12 col-sm-12 col-md-6  col-lg-3 col-xl-3 d-flex flex-wrap align-content-end">
-							<div class="rc">
-								<img src="img/cov/platform.png" alt="vagon" class="platform">
-								<p>Платформы</p>
-							</div>
-						</div>
-						<div class="col-12 col-sm-12 col-md-6  col-lg-3 col-xl-3 d-flex flex-wrap align-content-end">
-							<div class="rc">
-								<img src="img/cov/hopper.png" alt="vagon" class="hopper">
-								<p>Хопперы</p>
-							</div>
-						</div>
-
-
-
 					</div>
 
 				</div>
@@ -138,7 +146,7 @@
 			<div id="collapseTwo" class="collapse" data-parent="#accordion">
 				<div class="card-body">
 					<div class="row">
-						<div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+						<div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-7">
 							<div class="services">
 								<p>«УВК» предоставляет услуги по текущему, среднему и капитальному ремонту
 									колесных пар.<br>
@@ -159,7 +167,30 @@
 									вспомогательных процессов.</p>
 							</div>
 						</div>
-						<div class="col-12 col-sm-6 col-md-12 col-lg-6 col-xl-6">
+						<div class="col-12 col-sm-6 col-md-12 col-lg-6 col-xl-5">
+							<div class="services"><img src="img/main/repair-pair.jpg" alt="serv-img" class="rounded">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="card">
+			<div class="card-header">
+				<a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
+					Реализация лома цветных и черных металлов
+				</a>
+			</div>
+			<div id="collapseThree" class="collapse" data-parent="#accordion">
+				<div class="card-body">
+					<div class="row">
+						<div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-7">
+							<div class="services">
+								<p>«УВК» предоставляет услуги по реализации лома цветных и черных металлов
+
+							</div>
+						</div>
+						<div class="col-12 col-sm-6 col-md-12 col-lg-6 col-xl-5">
 							<div class="services"><img src="img/main/repair-pair.jpg" alt="serv-img" class="rounded">
 							</div>
 						</div>
@@ -168,9 +199,7 @@
 			</div>
 		</div>
 	</div>
-	</div>
-
-	<!-- Новости -->
+	<!-- Новости 
 	<div class="block">
 		<h4>Новости:</h4>
 		<div class="row">
@@ -212,15 +241,13 @@
 					<h6>06.04.2019</h6>
 					<img src="img/main/news-3.jpg" alt="news-img">
 					<a href="#" class="stretched-link">
-						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, facere iste repudiandae
-							nisi sapiente repellat rerum laborum omnis beatae vitae eaque recusandae mollitia
-							accusantium tempore.</p>
+						<p>Сотрудники Уральской вагоноремонтной компании приняли участие в соревнованиях по стритболу,
+							подъёму гири на время и настольному теннису.</p>
 					</a>
 				</div>
 			</div>
 		</div>
-	</div>
-
+	</div>-->
 	<!-- Партнеры слайдер
 	<div id="carouselId" class="carousel slide" data-ride="carousel">
 		<h4>Наши партнеры:</h4>
@@ -276,7 +303,6 @@
 			</div>
 		</div>
 	</div>
-
 	<!-- Футер -->
 	<footer>
 		<div class="row">
@@ -351,7 +377,6 @@
 			});
 		});
 	</script>
-
 </body>
 
 </html>
