--- a/pages/about.html
+++ b/pages/about.html
@@ -2,6 +2,13 @@
 <html lang="ru">
 
 <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135464000-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-135464000-1');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -15,38 +22,38 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/jquery.fancybox.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <title>О компании</title>
 </head>
 
 <body>
 
     <!-- Навбар -->
-        <nav class="navbar navbar-expand-sm navbar-light">
-            <a class="navbar-brand" href="../index.html">
-                <img src="../img/main/logo.png" height="35" alt="uvk">
-            </a>
-            <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
-                data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="collapsibleNavId">
-                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item text-uppercase">
-                        <a class="nav-link" href="#">О компании</a>
-                    </li>
-                    <li class="nav-item text-uppercase">
-                        <a class="nav-link" href="#">Услуги</a>
-                    </li>
-                    <li class="nav-item text-uppercase">
-                        <a class="nav-link" href="contacts.html">Контакты</a>
-                    </li>
-                </ul>
-                <span class="phone-number">+7 (3519) 24-86-24</span>
-            </div>
-        </nav>
-<img src="../img/main/main.jpg" srcset="
+    <nav class="navbar navbar-expand-sm navbar-light">
+        <a class="navbar-brand" href="../index.html">
+            <img src="../img/main/logo.png" height="35" alt="uvk">
+        </a>
+        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
+            aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavId">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item text-uppercase">
+                    <a class="nav-link" href="#">О компании</a>
+                </li>
+                <li class="nav-item text-uppercase">
+                    <a class="nav-link" href="#">Услуги</a>
+                </li>
+                <li class="nav-item text-uppercase">
+                    <a class="nav-link" href="contacts.html">Контакты</a>
+                </li>
+            </ul>
+            <span class="phone-number">+7 (3519) 24-86-24</span>
+        </div>
+    </nav>
+    <img src="../img/main/main.jpg" srcset="
     ../img/main/main-mobile.jpg 320w,
     ../img/main/main-wide-mobile.jpg 480w,
     ../img/main/main-tablet.jpg 768w,
@@ -59,26 +66,32 @@
     (max-width: 40em) 90vw" alt="УВК">
 
     <!-- О компании -->
-<div class="info">
-    <div class="row">
-        <div class="col-12 col-sm-ппр12 col-md-6 col-lg-6">
-            <p>Акционерное общество «Уральская вагоноремонтная компания» зарегистрировано 18 июля 2006 года.
+    <div class="info">
+        <div class="row">
+            <div class="col-12 col-sm-ппр12 col-md-6 col-lg-6">
+                <p>Акционерное общество «Уральская вагоноремонтная компания» зарегистрировано 18 июля 2006 года.
 
-                Профессионализм, качество, надежность, - вот те критерии, благодаря которым компания завоевала доверие и добрую славу от собственников подвижного состава.
-                
-                Следуя европейским стандартам организации производственного процесса, предприятие стремится проводить освоение автоматизации оборудования и внедрять программы, нацеленные на повышение производительности и обеспечение комфортных условий труда работников.
-                
-                Главный приоритет для нашей компании - это интересы собственников подвижного состава. Надежность, индивидуальный подход к каждому клиенту, компетентность персонала - это принципы деятельности АО «УВК», которые позволяют уверенно работать, решая поставленные задачи и отвечая требованиям самых взыскательных клиентов.</p>
-        </div>
-        <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-           <img src="../img/about-origin.jpg" alt="">
+                    Профессионализм, качество, надежность, - вот те критерии, благодаря которым компания завоевала
+                    доверие и добрую славу от собственников подвижного состава.
+
+                    Следуя европейским стандартам организации производственного процесса, предприятие стремится
+                    проводить освоение автоматизации оборудования и внедрять программы, нацеленные на повышение
+                    производительности и обеспечение комфортных условий труда работников.
+
+                    Главный приоритет для нашей компании - это интересы собственников подвижного состава. Надежность,
+                    индивидуальный подход к каждому клиенту, компетентность персонала - это принципы деятельности АО
+                    «УВК», которые позволяют уверенно работать, решая поставленные задачи и отвечая требованиям самых
+                    взыскательных клиентов.</p>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                <img src="../img/about-origin.jpg" alt="">
+            </div>
         </div>
     </div>
-</div>
     <!-- Лицензии -->
     <div class="licenses">
-       <h4  data-toggle="collapse" data-target="#show">Лицензии <i class="fa fa-arrow-down" aria-hidden="true"></i>
-       </h4>
+        <h4 data-toggle="collapse" data-target="#show">Лицензии <i class="fa fa-arrow-down" aria-hidden="true"></i>
+        </h4>
         <div id="show" class="row collapse">
             <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3">
                 <a href="../img/licenses/1305.jpg" data-fancybox="gallery" data-caption="Caption #1">
