--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -2,6 +2,19 @@
 <html lang="ru">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135464000-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-135464000-1');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -44,7 +57,7 @@
             <span class="phone-number">+7 (3519) 24-86-24</span>
         </div>
     </nav>
-<img src="../img/main/main.jpg" srcset="
+    <img src="../img/main/main.jpg" srcset="
     ../img/main/main-mobile.jpg 320w,
     ../img/main/main-wide-mobile.jpg 480w,
     ../img/main/main-tablet.jpg 768w,
@@ -55,7 +68,7 @@
     (max-width: 20em) 30vw,
     (max-width: 30em) 60vw,
     (max-width: 40em) 90vw" alt="УВК">
-    
+
     <div class="map">
         <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
@@ -65,33 +78,33 @@
                         <tr>
                             <td scope="row"><span>Генеральный директор</span></td>
                             <td>Боднар Виктор Евгеньевич</td>
-                            <td>Тел: 24-86-20<br> test@uvrk.ru</td>
+                            <td>Тел: 24-86-20<br>Bodnar.V.E@uvrk.ru</td>
                         </tr>
                         <tr>
                             <td scope="row"><span>Первый заместитель генерального директора</span></td>
                             <td> Рузанова Зоя Александровна</td>
-                            <td>Тел: 24-86-20<br> test@uvrk.ru</td>
+                            <td>Тел: 24-86-30<br>Ryzanova.Z.A@uvrk.ru</td>
                         </tr>
                         <tr>
                             <td scope="row"><span>Главный инженер</span></td>
                             <td>Морин Виталий Владимирович</td>
-                            <td>Тел: 24-86-20<br> test@uvrk.ru</td>
+                            <td>Тел: 24-86-29<br>Morin.V.V@uvrk.ru</td>
                         </tr>
                         <tr>
                             <td scope="row"><span>Заместитель генерального директора по качеству и технологии</span>
                             </td>
                             <td>Юхименко Елена Геннадьевна</td>
-                            <td>Тел: 24-86-20<br> test@uvrk.ru</td>
+                            <td>Тел: 24-86-24 Доб. 134<br>Yukhimenko.E.G@uvrk.ru</td>
                         </tr>
                         <tr>
                             <td scope="row"><span>Финансовый директор</span></td>
                             <td>Бобринский Вячеслав Александрович</td>
-                            <td>Тел: 24-86-20<br> test@uvrk.ru</td>
+                            <td>Тел: 24-86-24 Доб. 110<br>Bobrinsky.V.A@uvrk.ru</td>
                         </tr>
                         <tr>
                             <td scope="row"><span>Начальник отдела сбыта</span></td>
                             <td>Чанчикова Надежда Николаевна</td>
-                            <td>Тел: 24-86-20<br> test@uvrk.ru</td>
+                            <td>Тел: 24-86-24 Доб. 126<br>Chanchikova.N.N@uvrk.ru</td>
                         </tr>
                     </tbody>
                 </table>
